--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Tarefas</title>
-    <link href="styles.css" rel="stylesheet" />
+    <link href="css/styles.css" rel="stylesheet" />
 </head>
 <body>
     <div class="container">
@@ -79,6 +79,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
